tests/functional/data/transpiler/common/errors/barrier/does_not_take_kwargs.err
does_not_take_kwargs.cpp:6:13: error: [@barrier] does not take kwargs
    6 |             @barrier(a=12);
      |             ^
